--- a/helloWorldAssessment/Base.lproj/Main.storyboard
+++ b/helloWorldAssessment/Base.lproj/Main.storyboard
@@ -65,7 +65,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                     <connections>
                         <outlet property="mapView" destination="S4c-6E-sJL" id="3am-as-os0"/>
-                        <outlet property="tableViw" destination="5Lg-l1-75e" id="7NE-n3-cK1"/>
+                        <outlet property="tableView" destination="5Lg-l1-75e" id="VaT-1P-frs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
